# Weather

./: CMakeLists.txt  README.md
config/: config.json
lib/: CMakeLists.txt  api.cpp  api.h  console.cpp  console.h  info.cpp  info.h  pictures.h
